add new FILTER, at the end of meta-data, before header

--- a/ReadMe
+++ b/ReadMe
@@ -1,3 +1,3 @@
 The main tool, *filter* sits in bin/ and can be invoked as follows,
 
-bin/filter -i infoID -o comparator -v againstValue -f sourceFilePath
+bin/filter -i infoID -o comparator -v againstValue -f sourceFilePath > outfilePath
